prevent profile name wrapping when collapsing.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-container.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-container.less
@@ -88,6 +88,7 @@
 
   .name {
     line-height: 1.2;
+    width: 118px; // to prevent wrapping when collapsing
   }
 
   .media-object {
